--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,24 @@
+// vercel.json change করুন
 {
   "version": 2,
   "builds": [
     {
-      "src": "api/chat.js",
+      "src": "James/api/chat.js",
       "use": "@vercel/node"
     },
     {
-      "src": "index.html",
+      "src": "James/index.html",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/chat",
-      "dest": "/api/chat.js"
+      "dest": "/James/api/chat.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/James/index.html"
     }
   ]
 }
